src/converters/pipenv/snapshots/migrate_to_uv__converters__pipenv__tests__perform_migration_empty_requires.snap
---
source: src/migrators/pipenv/mod.rs
expression: "perform_migration(Path::new(\"tests/fixtures/pipenv/empty_requires/Pipfile\"),\nPath::new(\"tests/fixtures/pipenv/empty_requires/pyproject.toml\"),\nDependencyGroupsStrategy::SetDefaultGroups,)"
snapshot_kind: text
---
'''
[project]
name = ""
version = "0.0.1"

[tool.uv]
package = false
'''
