src/converters/pipenv/snapshots/migrate_to_uv__converters__pipenv__tests__perform_migration_python_full_version.snap
---
source: src/migrators/pipenv/mod.rs
expression: "perform_migration(Path::new(\"tests/fixtures/pipenv/python_full_version/Pipfile\"),\nPath::new(\"tests/fixtures/pipenv/python_full_version/pyproject.toml\"),\nDependencyGroupsStrategy::SetDefaultGroups,)"
snapshot_kind: text
---
'''
[project]
name = ""
version = "0.0.1"
requires-python = "==3.13.1"

[tool.uv]
package = false
'''
